# htseq-tool

./: .gitignore  .isort.cfg  .secrets.baseline  Dockerfile  Makefile  README.md  build-gdc-docker.sh  dev-requirements.txt  fpkm.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
expression_normalization/: gencode.v22.gene.length.txt  getGeneLength.py
htseq-tool/: __main__.py  fpkm.py  htseq.py  htseq_main.py  pipelineUtil.py  setupLog.py
htseq_tools/: __main__.py  utils.py
htseq_tools/tools/: fpkm.py  gene_lengths.py  merge_counts.py
tests/: test_fpkm.py  test_gene_lengths.py  test_merge_counts.py  test_utils.py
tests/etc/: test.gtf  test_counts_1.txt  test_counts_2.txt  test_lengths.txt
