[metadata]
name = htseq_tools
description = htseq-count output tools
url = https://github.com/NCI-GDC/htseq-tool
author = Kyle Hernandez
author_email = kmhernan@uchicago.edu
python_requires = >=3.6
license_files =
	LICENSE
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
install_requires =
        numpy

zip_safe = False
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
	maflib = htseq_tools.__main__:main
